2008-11-02 <Gustaf.Neumann@wu-wien.ac.at>
    * Release of XOTcl 1.6.2

2008-11-01 <Gustaf.Neumann@wu-wien.ac.at>
    * added command ::xotcl::finalize

      This command has the only purpose to delete all objects and classes
      of an interpreter in a multi-threaded environment at a safe time. 

      Background: when XOTcl is used in a threaded environment such as
      for example in AOLserver, one has to take care that the deletion
      of objects and classes happens in a safe environment, where the
      XOTcl destructors (destroy methods) are still able to
      run. Without ::xotcl::finalize the deletion happens in
      Tcl_FinalizeThread(), after thread cleanup (where e.g.  the
      thread local storage is freed). This can lead to memory leaks in
      AOLserver, which allocates e.g. some structures on demand, but
      since this happens after cleanup, it will leak. A simple ns_log
      in a destructor might lead to this problem. The solution is to
      call ::xotcl::finalize in the "delete trace" in AOLserver (as it
      happens in OpenACS).

      Note, that ::xotcl::finalize is not intended for application programs.

    * some code cleanup

2008-10-17 <Gustaf.Neumann@wu-wien.ac.at>

    * handle nonposargs in method "copy" properly

    * extend regression test for copy
 
    * added "<class> mixinof -closure ?pattern?"
      Query the objects for which <class> is used as a per-object-mixin 
      (directly or indirectly)

    * extended regression test for mixinof

    * updated documentation 
 
2008-09-11 <Gustaf.Neumann@wu-wien.ac.at>
    * Implement proper downgrading of Classes to Objects: 

      In cases where a class ::C is created, which is later downgraded
      to an object ::C (either via "::C class ::xotcl::Object" or via
      "::xotcl::Object ::C"), earlier versions of XOTcl were to
      liberal. The major problem is to invalidate all places, where
      ::C might be used as a class, and were only classes are allowed